# satori

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: main.py
app/api/: healthcheck.py
app/api/v1/: router.py
app/api/v1/endpoints/: applications.py
app/config/: logger.py
app/crud/: applications_crud.py  base.py
app/db/: get_db.py  session.py
app/exceptions/: server.py
app/models/: applications.py  lines_coverage.py  pivot_tables.py
app/schemas/: applications.py
app/utils/: sockets.py
db/migrations/: 20231221005120_lines_coverage.sql  20231221005617_applications.sql  20231221005711_applications_lines_coverage.sql
tests/: conftest.py
tests/api/v1/: test_applications.py
tests/factories/: applications.py
