[tool.poetry]
name = "satori"
version = "0.1.0"
description = ""
authors = ["Roberto Garcia <robertojesusgarcia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
